<resources>
    <string name="app_name">BioGardX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_analytics">Analytics</string>
    <string name="menu_control_panel">Control Panel</string>


    <string name="menu_setting">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_help_feedback">Help &amp; Feedback</string>
    <string name="menu_about">About BioGardX </string>

    <string name="card_interior_par_title">Interior</string>
    <string name="card_exterior_par_title">Exterior</string>
    <string name="card_Water_par_title">Water</string>

    <string name="card_temperature_meas">Temperature</string>
    <string name="card_temperature_desc">Air Temperature</string>
    <string name="card_humidity_meas">Humidity</string>
    <string name="card_humidity_desc">Amount of water present in the air</string>
    <string name="card_soil_moisture_meas">Soil Moisture</string>
    <string name="card_soil_moisture_desc">Amount of water present in the soil</string>
    <string name="card_co2_concentration_meas">CO2 Conc </string>
    <string name="card_co2_concentration_desc">Percentage of CO2 present in the air </string>
    <string name="card_rain_drops_meas">Rain</string>
    <string name="card_rain_drops_desc">Amount of rains</string>
    <string name="card_solar_radiation_meas">Solar Radiations </string>
    <string name="card_solar_radiation_desc">Available light </string>

    <string name="card_water_reservoir_meas">Water Reservoir </string>
    <string name="card_water_reservoir_desc">Water level in the reservoir </string>
    <string name="card_water_ph_meas">PH </string>
    <string name="card_water_ph_desc">Ph level of the water </string>

    <string name="card_air_title">Air Conditioner </string>
    <string name="card_lights_title">Lights</string>
    <string name="card_irrigation_title">Irrigation</string>
    <string name="card_irr_title_moisture">Soil Moisture</string>


    <string name="card_roof_title">Roof</string>
    <string name="card_curtains_title">Curtains</string>

    <string name="control_mode">Control Mode</string>
    <string name="btn_set_value">Set</string>
    <string name="tv_set_point">Set Point</string>

    <string name="irr_light">Light</string>
    <string name="irr_medium">Moderate</string>
    <string name="irr_intensive">Intensive</string>

    <string name="roof_open">Open</string>
    <string name="roof_closed">Closed</string>

    <string name="curtains_open">Open</string>
    <string name="curtains_half_open">H/O</string>
    <string name="curtains_closed">Closed</string>

    <string name="set_commands">Set Commands</string>


    <string name="paired_devices">Paired Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="bt_dialog_title">Connect to a Bluetooth device</string>
    <string name="scan_button">Scan</string>
    <string name="connect">Connect to BT device</string>
    <string name="bluetooth_button">Bluetooth</string>
    <string name="decoverable_button">Show Descoverable</string>

    <string name="permission_dialog_title">Use Location Service</string>
    <string name="permission_dialog_agree">Agree</string>
    <string name="permission_dialog_disagree">Disagree</string>
    <string name="permission_dialog_message">The Location service is required to scan
                                             nearby Bluetooth Devices\n\n\n\n
                                             Do you want to turn it on ? </string>

    <string name="not_connected">Connection lost </string>
    <string name="out_buffer_edit_text_hint">enter a text to send</string>

    <string name="title_connected">Connected</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_not_connected">Not Connected</string>

    <string name="connect_to_bt_device">Connect to BT device </string>
    <string name="disconnect">Disconnect</string>







</resources>